--- a/styles.css
+++ b/styles.css
@@ -9,19 +9,48 @@
 
 /* 1. Global Styles
 ======================================== */
+
 section{
-}
-section div {
-  padding: 0.5rem;
-  width: 100%;
-  height: 2rem;
+  margin-top: 3rem;
 }
 
 h1{
   text-align: center;
+  padding: 3rem;
 }
+
+a{
+  text-decoration: none;
+  color: white;
+}
+body{
+  padding: 0 9rem;
+  color: #333;
+}
+
 /* 2. Color Styles
 ======================================== */
+
+/* Color Theme Swatches in Hex */
+.My-Color-Theme-1-hex { color: #A32F1A; }
+.My-Color-Theme-2-hex { color: #FF745C; }
+.My-Color-Theme-3-hex { color: #F0593E; }
+.My-Color-Theme-4-hex { color: #0AA362; }
+.My-Color-Theme-5-hex { color: #3EF0A4; }
+
+/* Color Theme Swatches in RGBA */
+.My-Color-Theme-1-rgba { color: rgba(163, 47, 26, 1); }
+.My-Color-Theme-2-rgba { color: rgba(255, 116, 92, 1); }
+.My-Color-Theme-3-rgba { color: rgba(240, 89, 62, 1); }
+.My-Color-Theme-4-rgba { color: rgba(10, 163, 98, 1); }
+.My-Color-Theme-5-rgba { color: rgba(62, 240, 164, 1); }
+
+/* Color Theme Swatches in HSLA */
+.My-Color-Theme-1-hsla { color: hsla(9, 72, 37, 1); }
+.My-Color-Theme-2-hsla { color: hsla(8, 100, 68, 1); }
+.My-Color-Theme-3-hsla { color: hsla(9, 85, 59, 1); }
+.My-Color-Theme-4-hsla { color: hsla(154, 88, 33, 1); }
+.My-Color-Theme-5-hsla { color: hsla(154, 85, 59, 1); }
 
 /* 3. Fonts
 ======================================== */
@@ -45,8 +74,7 @@ p{
   font-family: 'Roboto', sans-serif;
   font-size: 1rem;
   max-width: 700px;
-  line-height: 1.3rem;
-  min-width: 300px;
+  line-height: 1.5rem;
 }
 
 /* 4. Text styles
@@ -54,3 +82,67 @@ p{
 
 /* 5. Section styles
 ======================================== */
+
+section .section-title {
+  padding: 0.5rem;
+  height: 2rem;
+  display: grid;
+  align-items: center;
+}
+
+section p{
+  padding: 1rem 3rem;
+}
+
+.red{
+  background-color: #F0593E;
+  color: white;
+}
+
+.orange{
+  background-color: #E8762A;
+  color: white;
+}
+
+.light{
+  background-color: white;
+  color: #333;
+}
+
+section .section-title h3{
+  margin-left: 3rem;
+}
+
+.grid2{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid3{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.tiles{
+  height: 15rem;
+  text-align: center;
+  display: grid;
+  align-items: center;
+  transition-duration: 0.15s;
+}
+
+a .red:hover{
+  background-color: #b84430;
+}
+
+a .light:hover{
+  background-color: rgb(207, 207, 207);
+}
+
+a .orange:hover{
+  background-color: #c76728;
+}
+
+#frontEnd{
+  height: 30rem;
+}
